# metamorphic-log

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  npm-README.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci-native.yml  ci.yml  release-native.yml  release.yml
benches/: ingestion.rs
docs/: keytrans-directory-design.md
native/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
native/android/jvm/: build.gradle.kts
native/kotlin/: build.gradle.kts  settings.gradle.kts
native/python/: README.md  pyproject.toml
native/smoke/: Smoke.kt  Smoke.swift  smoke.py  vectors.json
native/swift/: Package.swift.template  README.md
src/: anchor.rs  commitment.rs  coniks.rs  directory.rs  encoding.rs  error.rs  ffi.rs  lib.rs  note.rs  policy.rs  tile.rs  vrf.rs  wasm.rs
src/checkpoint/: mod.rs
src/ingest/: mod.rs
src/keytrans/: ext.rs  ladder.rs  log_tree.rs  mod.rs  prefix_tree.rs  tls.rs
src/leaf/: mod.rs
src/merkle/: mod.rs
src/proof/: mod.rs
tests/: anchoring.rs  c2sp_vectors.rs  conformance.rs  coniks_vectors.rs  cross_language.rs  ingestion.rs  namespace_policy.rs  pq_checkpoint.rs
tools/uniffi-bindgen/: Cargo.toml
tools/uniffi-bindgen/src/: main.rs
