[package]
name = "metamorphic-log"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Tamper-evident, append-only transparency log + verification SDK for the Metamorphic platform: RFC 6962/9162 Merkle proofs, C2SP tlog-tiles substrate, witnessed checkpoints, hybrid post-quantum checkpoint signing, and CONIKS-style index privacy. Single source of truth for primitives is metamorphic-crypto."
license = "MIT OR Apache-2.0"
repository = "https://github.com/moss-piglet/metamorphic-log"
homepage = "https://metamorphic.app"
keywords = ["transparency-log", "merkle", "rfc6962", "post-quantum", "coniks"]
categories = ["cryptography", "wasm"]
readme = "README.md"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# SINGLE SOURCE OF TRUTH for all cryptographic primitives (sha256/sha3_512,
# composite PQ signatures, ML-KEM posture). NO parallel crypto stack — every
# primitive used by this crate comes from metamorphic-crypto.
#
# The canonical requirement is the published crates.io version, so CI, the
# release pipeline, and downstream users all resolve a real, audited artifact.
# For LOCAL co-development against an unreleased metamorphic-crypto checkout,
# uncomment the `[patch.crates-io]` block at the bottom of this file to point
# at the sibling working tree (`../metamorphic-crypto`) without changing the
# version requirement.
# metamorphic-crypto 0.7.2 first exposed the raw RFC 8032 Ed25519 interop API
# (`ed25519_verify` / `ed25519_sign` / ...) that this crate's `note` module uses
# to verify classical C2SP witness co-signatures. 0.8.0 adds the classical ECVRF
# (`ecvrf_prove` / `ecvrf_verify` / ...) that this crate's `vrf` / `coniks`
# modules use for CONIKS-style index privacy.
metamorphic-crypto = "0.8.0"
thiserror = "2"
# OS CSPRNG for sampling commitment blinding nonces (prover side). Mirrors
# metamorphic-crypto's wasm handling: getrandom 0.2 needs its `js` backend on
# wasm32 so the crate still type-checks for the browser verifier build.
getrandom = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# --- Local co-development override (commented out by default) ---
# Uncomment to build against an unreleased, sibling metamorphic-crypto working
# tree instead of the published crate. Leave commented in committed code so CI,
# release, and downstream consumers resolve the published version.
#
# [patch.crates-io]
# metamorphic-crypto = { path = "../metamorphic-crypto" }
